--- a/styles.css
+++ b/styles.css
@@ -3,10 +3,14 @@
     font-family: Arial, Helvetica, sans-serif;
     border: border-box;
 }
+
+/* box1 */
 .navbar{
     height: 60px;
     background-color: #0f1111;
     color: white;
+    display: flex;
+    align-items: center;
 }
 .nav-logo{
     height: 35px;
@@ -20,4 +24,38 @@
 }
 .border:hover{
     border: 1px solid white;
+}
+
+/* box2 */
+.add-first{
+    color: #cccccc;
+    font-size: 0.85rem;
+    margin-left: 15px;
+}
+.add-second{
+    font-size: 1rem;
+    margin-left: 3px;
+}
+.add-icon{
+    display: flex;
+    align-items: center;
+}
+
+/* box3 */
+.nav-search{
+    display: flex;
+    /* justify-content: center;
+    align-items: center; */
+    background-color: blue;
+    width: 620px;
+    height: 40px;
+    border-radius: 4px;
+}
+.search-select{
+    background-color: #f3f3f3;
+    width: 50px;
+    border-top-left-radius: 4px;
+    border-bottom-left-radius:4px;
+    text-align: center;
+    border: none;
 }
