--- a/styles.css
+++ b/styles.css
@@ -44,8 +44,7 @@
 /* box3 */
 .nav-search{
     display: flex;
-    /* justify-content: center;
-    align-items: center; */
+    justify-content: space-evenly;
     background-color: blue;
     width: 620px;
     height: 40px;
@@ -58,4 +57,19 @@
     border-bottom-left-radius:4px;
     text-align: center;
     border: none;
+}
+.search-input{
+    width: 100%;
+    font-size: 1rem;
+    border: none;
+}
+.search-icon{
+    width: 45px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.2rem;
+    background-color: #0063F9; 
+    border-top-right-radius: 4px;
+    border-bottom-right-radius:4px;
 }
