--- a/styles.css
+++ b/styles.css
@@ -75,6 +75,9 @@
     border-bottom-right-radius:4px;
     color: black;
 }
+.nav-search:hover{
+    border: 1px solid blue;
+}
 
 /* box 4 */
 span{
@@ -86,3 +89,10 @@ span{
 }
 
 /* box 5 */
+.nav-cart i{
+    font-size: 30px;
+}
+.nav-cart{
+    font-size: 0.85rem;
+    font-weight: 700;
+}
