--- a/styles.css
+++ b/styles.css
@@ -96,3 +96,25 @@ span{
     font-size: 0.85rem;
     font-weight: 700;
 }
+
+/* panel */
+.panel{
+    height: 40px;
+    background-color: #222F3E ;
+    display: flex;
+    color: white;
+    align-items: center;
+    justify-content: space-evenly;;
+}
+.panel-ops p{
+    margin-left: 40px;   /* watch if anything go wrongj  */
+    display: inline;
+}
+.panel-ops{
+    width: 70%;
+    font-size: 0.85rem;
+}
+.panel-deal{
+    font-size: 0.85rem;
+    font-weight: 700;
+}
