--- a/styles.css
+++ b/styles.css
@@ -118,3 +118,11 @@ span{
     font-size: 0.85rem;
     font-weight: 700;
 }
+
+
+/* hero section */
+.hero-section{
+    background-image: url(Hero_img.jpg);
+    background-size: cover;
+    height: 600px;
+}
