--- a/styles.css
+++ b/styles.css
@@ -124,5 +124,21 @@ span{
 .hero-section{
     background-image: url(Hero_img.jpg);
     background-size: cover;
-    height: 600px;
+    height: 350px;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+}
+.hero-msg{
+    background-color: white;
+    color: black;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 0.85rem;
+    margin-bottom: 25px;
+}
+.hero-msg a{
+    color: #007185;
 }
