--- a/styles.css
+++ b/styles.css
@@ -155,7 +155,19 @@ span{
     height: 400px;
     width: 23%;
     background-color: white;
+    padding: 20px 0px 15px;
+    margin-top: 15px;
 }
 .box-img{
+    background-size: cover;
     height: 300px;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+}
+.box-content{
+    margin-left: 1rem;   
+    margin-right: 1rem;   
+}
+.box-content p{
+    color: #007185;
 }
