--- a/styles.css
+++ b/styles.css
@@ -131,6 +131,7 @@ span{
 }
 .hero-msg{
     background-color: white;
+    width: 1470px;
     color: black;
     height: 40px;
     display: flex;
@@ -147,8 +148,9 @@ span{
  /* shop section */
  .shop-section{
     display: flex;
-   justify-content: space-evenly;
-   background-color: #e2e7e6;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    background-color: #e2e7e6;
  }
 .box{
     border: 2px solid black;
