--- a/styles.css
+++ b/styles.css
@@ -173,3 +173,27 @@ span{
 .box-content p{
     color: #007185;
 }
+
+.shop-le{
+    display: flex;
+    background-color: #e2e7e6;
+}
+.boxy{
+    border: 2px solid black;
+    height: 280px;
+    width: 100%;
+    background-color: white;
+    padding: 20px 20px 15px;
+    margin-top: 15px;
+    margin-left: 1rem;   
+    margin-right: 1rem;   
+}
+.boxy-img{
+    background-size: cover;
+    height: 200px;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+}
+.boxy-content p{
+    color: #007185;
+}
