--- a/styles.css
+++ b/styles.css
@@ -214,3 +214,20 @@ footer{
     justify-content: center;
     font-size: 0.85rem;
 }
+
+.foot-panel2{
+    background-color: #222f3d;
+    color: white;
+    height: 300px;
+    display: flex;
+    justify-content: space-evenly;
+}
+ul{
+    margin-top: 25px;
+}
+ul a{
+    display: block;
+    font-size: 0.85rem;
+    margin-top: 10px;
+    color: #dddddd;
+}
