--- a/styles.css
+++ b/styles.css
@@ -247,3 +247,17 @@ ul a{
     height: 35px;
     width: 100px;
 } 
+
+.foot-panel4{
+    background-color: #0f1111;
+    color: white;
+    height: 80px;
+    font-size: 0.7rem;
+    text-align: center;
+}
+.pages{
+    padding-top: 25px;
+}
+.copyright{
+    padding-top: 5px;
+}
